--- a/web/index.html
+++ b/web/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#f0e9df" />
-    <link rel="manifest" href="./manifest.webmanifest" />
-    <link rel="icon" href="./icon.png" />
-    <link rel="apple-touch-icon" href="./icone2.png" />
+    <link rel="manifest" href="%BASE_URL%manifest.webmanifest" />
+    <link rel="icon" href="%BASE_URL%icon.png" />
+    <link rel="apple-touch-icon" href="%BASE_URL%icone2.png" />
     <title>Dami Duarte</title>
     <script>
       (function () {
