--- a/web/index.html
+++ b/web/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#f0e9df" />
     <link rel="manifest" href="%BASE_URL%manifest.webmanifest" />
-    <link rel="icon" href="%BASE_URL%icon.png" />
-    <link rel="apple-touch-icon" href="%BASE_URL%icone2.png" />
+    <link rel="icon" href="%BASE_URL%logo.png" />
+    <link rel="apple-touch-icon" href="%BASE_URL%logo.png" />
     <title>Dami Duarte</title>
     <script>
       (function () {
